fix: fix dark mode bug, delete excess layout

--- a/labReact/src/layouts/DetailedPageLayout/DetailedPageLayout.module.scss
+++ b/labReact/src/layouts/DetailedPageLayout/DetailedPageLayout.module.scss
@@ -10,8 +10,6 @@
     justify-content: flex-start;
     flex-direction: column;
     flex: 1 0 auto;
-    margin-left: auto;
-    margin-right: auto;
   }
 
 }
